--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,11 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    color: #fff;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=Syne&display=swap');
 
 @import "./variaveis.scss";
@@ -13,3 +5,44 @@
 @import "./paginas/home.scss";
 
 @import "./paginas/responsivo.scss";
+
+*{
+    margin: 0;
+    padding: 0;
+    background-color: $color-fundo;
+    box-sizing: border-box;
+    text-decoration: none;
+    cursor: none;
+}
+.cursor{
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    border: 1px solid #c6c6c6;
+    border-radius: 50%;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%);
+    transition: .1s;
+}
+.cursor2{
+    position: fixed;
+    width: 8px;
+    height: 8px;
+    background-color: #c6c6c6;
+    border-radius: 50%;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%);
+    transition: .15s;
+}
+:hover ~ .cursor{
+    transform: translate(-50%, -50%) scale(1.5);
+    background-color: #c6c6c6;
+    opacity: .5;
+}
+:hover ~ .cursor2{
+    opacity: 0;
+}
