--- a/scss/global.scss
+++ b/scss/global.scss
@@ -12,9 +12,9 @@
     background-color: $color-fundo;
     box-sizing: border-box;
     text-decoration: none;
-    cursor: none;
+    /* cursor: none; */
 }
-.cursor{
+/* .cursor{
     position: fixed;
     width: 50px;
     height: 50px;
@@ -45,4 +45,5 @@
 }
 :hover ~ .cursor2{
     opacity: 0;
-}
+} */
+
