--- a/scss/variaveis.scss
+++ b/scss/variaveis.scss
@@ -20,6 +20,12 @@ $color-escura01: #232323;
     font-weight: 400;
     font-size: 32px;
 }
+@mixin dmSans28 {
+    font-family: 'DM Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+}
 @mixin dmSans24 {
     font-family: 'DM Sans', sans-serif;
     font-style: normal;
@@ -81,5 +87,18 @@ $color-escura01: #232323;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    border: none;
     padding: 16px;
+    transition: all 1s;
+    a{
+        background-color: transparent;
+        color: $color-branco;
+        transition: all 1s;
+    }
+}
+.button:hover{
+    background-color: $color-branco;
+    a{
+        color: $color-fundo;
+    }
 }
