--- a/scss/paginas/home.scss
+++ b/scss/paginas/home.scss
@@ -198,7 +198,7 @@ body{
                 height: 500px;
                 display: flex;
                 .card{
-                    width: 640px;
+                    width: 100%;
                     height: 500px;
                     background-color: $color-fundo;
                     position: relative;
@@ -252,6 +252,104 @@ body{
                 .card:hover .info{
                     opacity: 1;
                     transform: translateY(0px);
+                }
+            }
+        }
+    }
+    .servicos{
+        max-height: 388px;
+        width: auto;
+        height: auto;
+        color: #fff;
+        padding: 52px 0;
+        border-bottom: 1px solid #424141;
+        .innerWidth{
+            padding: 0 24px;
+            .titulo{
+                width: auto;
+                display: flex;
+                margin-bottom: 36px;
+                align-items: center;
+                .barTitle{
+                    display: block;
+                    width: 15px;
+                    height: 0;
+                    border: 1px solid #FFFFFF;
+                    margin-right: 10px;
+                    background-color: $color-branco;
+                    transition: all 0.3s ease-in-out;
+                }
+                h2{
+                    @include sectionTitle;
+                }
+            }
+            .conteudoServicos{
+                display: flex;
+                justify-content: space-between;
+                .servicosCard{
+                    min-width: 550px;
+                    height: 200px;
+                    background-color: #323232;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    padding: 50px 24px;
+                    gap: 14px;
+                    transition: 1s;
+                    .cardAssets{
+                        display: flex;
+                        align-items: center;
+                        gap: 24px;
+                        background: none;
+                        .servicoImg{
+                            width: 100px;
+                            height: 100px;
+                            border-radius: 50%;
+                            border: 1px solid #424141;
+                            background: none;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            transition: 1s;
+                            svg{
+                                background: none;
+                                path{
+                                    transition: 1s;
+                                    fill: #Fff;
+                                }
+                            }
+                        }
+                        .cardConteudo{
+                            background: transparent;
+                            h3{
+                                @include dmSans32;
+                                background: none;
+                            }
+                        }
+                    }
+                    .servicoNum{
+                        background: none;
+                        h2{
+                            font-family: 'DM Sans';
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 70px;
+                            line-height: 91px;
+                            color: transparent;
+                            -webkit-text-stroke: 0.5px #5a5a5a;
+                            background: none;
+                        }
+                    }
+                }
+                .servicosCard:hover{
+                    .servicoImg{
+                        background-color: #fff;
+                        svg{
+                            path{
+                                fill: #424141;
+                            }
+                        }
+                    }
                 }
             }
         }
