--- a/scss/variaveis.scss
+++ b/scss/variaveis.scss
@@ -83,6 +83,7 @@ $color-escura01: #232323;
 
 .button{
     @include syne24;
+    color: $color-branco;
     background-color: $color-escura01;
     display: flex;
     flex-direction: column;
@@ -97,6 +98,7 @@ $color-escura01: #232323;
     }
 }
 .button:hover{
+    color: $color-fundo;
     background-color: $color-branco;
     a{
         color: $color-fundo;
