Iniciando o responsivo na resolução 768x

--- a/scss/paginas/responsivo.scss
+++ b/scss/paginas/responsivo.scss
@@ -54,6 +54,16 @@
         }
     }
 }
+@media (max-width: 768px){
+    body{
+        .innerWidth{
+
+        }
+        main{
+            
+        }
+    }
+}
 @media (max-width: 425px){
     body{
         .innerWidth{
