--- a/scss/paginas/responsivo.scss
+++ b/scss/paginas/responsivo.scss
@@ -1,8 +1,7 @@
 @media (max-width: 1024px){
     body{
         .innerWidth{
-            max-width: 976px;
-            width: 976px;
+            width: 100%;
         }
         main{
             .home{
@@ -26,7 +25,6 @@
                 .innerWidth{
                     .conteudoServicos{
                         .servicosCard{
-                            min-width: 450px;
                             padding: 50px 20px;
                             .servicoNum{
                                 display: none;
@@ -58,8 +56,7 @@
     body{
         .innerWidth{
             padding: 0 24px;
-            max-width: 704px;
-            width: 704px;
+            width: 100%;
         }
         main{
             .home{
@@ -70,10 +67,6 @@
                         display: flex;
                         flex-direction: column-reverse;
                         gap: 18px;
-                        img{
-                            width: 657px;
-                            height: 782px;      
-                        }
                         .nome{
                             margin: 0;
                             h2{
@@ -124,8 +117,7 @@
 @media (max-width: 425px){
     body{
         .innerWidth{
-            max-width: 425px;
-            width: 425px;
+            width: 100%;
             padding: 15px 24px;
             margin: auto;
         }
@@ -193,10 +185,6 @@
                 .innerWidth{
                     padding: 52px 24px;
                     .banner{
-                        img{
-                            width: 377px;
-                            height: 449px;    
-                        }
                         .nome{
                             h2{
                                 font-size: 100px;
@@ -278,6 +266,26 @@
                             p{
                                 font-size: 14px;
                             }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media (max-width: 375px){
+    body{
+        main{
+            .home{
+                .innerWidth{
+                    .banner{
+                        .nome{
+                            h2{
+                                font-size: 80px;
+                            }
+                        }
+                        .textHome{
+                            font-size: 24px;
                         }
                     }
                 }
