--- a/scss/paginas/home.scss
+++ b/scss/paginas/home.scss
@@ -369,6 +369,7 @@ body{
                     width: auto;
                     display: flex;
                     align-items: center;
+                    margin-bottom: 36px;
                     .barTitle{
                         display: block;
                         width: 15px;
@@ -409,7 +410,7 @@ body{
                             .timelineItem{
                                 width: 100%;
                                 margin-bottom: 42px;
-                                margin-left: 24px;
+                                margin-left: 30px;
                                 .timelineDot{
                                     width: 12px;
                                     height: 12px;
@@ -444,7 +445,7 @@ body{
                         .timelineItens::before{
                             content: '';
                             position: absolute;
-                            height: 69%;
+                            height: 78%;
                             border: 1px solid $color-clara01;
                         }
                     }
