Criação da estrutura da pagina projetos

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -4,6 +4,8 @@
 
 @import "./paginas/home.scss";
 
+@import "./paginas/projetos.scss";
+
 @import "./paginas/responsivo.scss";
 
 *{
@@ -46,4 +48,3 @@
 :hover ~ .cursor2{
     opacity: 0;
 } */
-
