--- a/scss/paginas/home.scss
+++ b/scss/paginas/home.scss
@@ -443,7 +443,7 @@ body{
                         }
                     }
                 }
-                .buttonSobre{
+                .button{
                     width: fit-content;
                 }
             }
