style: project page and projects style

--- a/scss/variaveis.scss
+++ b/scss/variaveis.scss
@@ -5,6 +5,7 @@ $color-clara03: #323232;
 $color-preto: #000;
 $color-fundo: #1B1B1B;
 $color-escura01: #232323;
+$teste: #FBB900;
 
 @mixin titulo{
     width: auto;
