--- a/scss/paginas/projeto.scss
+++ b/scss/paginas/projeto.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+
 body{
     main{
         .projeto{
@@ -5,28 +7,251 @@ body{
             .innerWidth{
                 .titulo{
                     @include titulo;
-                    color: red;
                 }
-                .info{
-                    margin-bottom: 36px;
-                    h3{
-                        @include syne28;
-                        color: $color-branco;
-                        text-transform: capitalize;
-                        margin-bottom: 16px
+                .conteudoProjeto{
+                    .info{
+                        margin-bottom: 36px;
+                        h3{
+                            @include syne28;
+                            color: $color-branco;
+                            text-transform: capitalize;
+                            margin-bottom: 16px
+                        }
+                        p{
+                            @include dmSans24;
+                            color: $color-branco;
+        
+                        }
                     }
-                    p{
-                        @include dmSans24;
-                        color: $color-branco;
-    
+                    .button{
+                        width: fit-content;
+                        margin-bottom: 36px;
                     }
-                }
-                .button{
-                    width: fit-content;
-                    margin-bottom: 36px;
-                }
-                img{
-                    width: 100%;
+                    .projetoPreview{
+                        display: flex;
+                        flex-direction: column;
+                        gap: 70px;
+                        .projetoHeader{
+                            max-width: 1150;
+                            max-height: 815px;
+                            width: 100%;
+                            border-radius: 30px;
+                            padding: 25px;
+                            background-color: #1E1E1E;
+                            img{
+                                width: 100%;
+                                border-radius: 30px;
+                            }
+                        }
+                        .projetoSobre{
+                            max-width: 1150;
+                            max-height: 815px;
+                            width: 100%;
+                            border-radius: 30px;
+                            padding: 42px 74px 52px;
+                            background-color: $color-branco;
+                            .conteudoSobre{
+                                background-color: $color-branco;
+                                h3{
+                                    color: #1E1E1E;
+                                    font-family: 'Poppins', sans-serif;
+                                    font-size: 22px;
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    line-height: normal;
+                                    margin-bottom: 2px;
+                                    background-color: $color-branco;
+                                }
+                                hr{
+                                    width: 200px;
+                                    height: 4px;
+                                    border: 0;
+                                    margin-bottom: 20px;
+                                    background: #9747FF;
+                                }
+                                p{
+                                    color: #1E1E1E;
+                                    font-family: 'Poppins', sans-serif;
+                                    font-size: 20px;
+                                    font-style: normal;
+                                    font-weight: 300;
+                                    background-color: $color-branco;
+                                }
+                            }
+                        }
+                        .projetoTipo{
+                            max-width: 1150;
+                            max-height: 815px;
+                            width: 100%;
+                            border-radius: 30px;
+                            padding: 42px 74px 52px;
+                            background-color: #191919;
+                            .conteudoTipo{
+                                background-color: #191919;
+                                h3{
+                                    color: #fff;
+                                    font-family: 'Poppins', sans-serif;
+                                    font-size: 22px;
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    line-height: normal;
+                                    margin-bottom: 2px;
+                                    background-color: #191919;
+                                }
+                                hr{
+                                    width: 200px;
+                                    height: 4px;
+                                    border: 0;
+                                    margin-bottom: 20px;
+                                    background: #9747FF;
+                                }
+                                h2{
+                                    color: #fff;
+                                    font-family: 'Poppins', sans-serif;
+                                    font-size: 24px;
+                                    font-style: normal;
+                                    font-weight: 300;
+                                    line-height: normal;
+                                    margin-bottom: 12px;
+                                    background-color: #191919;
+                                }
+                                .tipografia{
+                                    display: flex;
+                                    justify-content: space-between;
+                                    background-color: #191919;
+                                    .regular{
+                                        h3{
+                                            color: #fff;
+                                            font-family: 'Poppins', sans-serif;
+                                            font-size: 20px;
+                                            font-style: normal;
+                                            font-weight: 400;    
+                                            background-color: #191919;
+                                        }                 
+                                        .mai{
+                                            color: #fff;
+                                            font-family: Poppins;
+                                            font-size: 16px;
+                                            font-style: normal;
+                                            font-weight: 400;
+                                            text-transform: uppercase;
+                                            background-color: #191919;
+                                        }     
+                                        .min{
+                                            color: #fff;
+                                            font-family: Poppins;
+                                            font-size: 16px;
+                                            font-style: normal;
+                                            font-weight: 400;
+                                            text-transform: lowercase;
+                                            background-color: #191919;
+                                        }          
+                                    }
+                                    .medium{
+                                        h3{
+                                            color: #fff;
+                                            font-family: 'Poppins', sans-serif;
+                                            font-size: 20px;
+                                            font-style: normal;
+                                            font-weight: 500;    
+                                            background-color: #191919;
+                                        }
+                                        .mai{
+                                            color: #fff;
+                                            font-family: Poppins;
+                                            font-size: 16px;
+                                            font-style: normal;
+                                            font-weight: 500;
+                                            text-transform: uppercase;
+                                            background-color: #191919;
+                                        }     
+                                        .min{
+                                            color: #fff;
+                                            font-family: Poppins;
+                                            font-size: 16px;
+                                            font-style: normal;
+                                            font-weight: 500;
+                                            text-transform: lowercase;
+                                            background-color: #191919;
+                                        }     
+                                    }
+                                }
+                            }
+                        }
+                        .projetoCores{
+                            max-width: 1150;
+                            max-height: 815px;
+                            width: 100%;
+                            border-radius: 30px;
+                            padding: 42px 74px 52px;
+                            background-color: $color-branco;
+                            .conteudoCores{
+                                background-color: $color-branco;
+                                h3{
+                                    color: #1E1E1E;
+                                    font-family: 'Poppins', sans-serif;
+                                    font-size: 22px;
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    line-height: normal;
+                                    margin-bottom: 2px;
+                                    background-color: $color-branco;
+                                }
+                                hr{
+                                    width: 200px;
+                                    height: 4px;
+                                    border: 0;
+                                    margin-bottom: 24px;
+                                    background: #9747FF;
+                                }
+                                .cores{
+                                    display: flex;
+                                    justify-content: space-around;
+                                    align-items: center;
+                                    background-color: $color-branco;
+                                    .cor1{
+                                        width: 150px;
+                                        height: 150px;  
+                                        border-radius: 20px;
+                                        background-color: #820AD1;
+                                        box-shadow: 17px 17px 36px 5px rgba(0, 0, 0, 0.05);
+                                    }
+                                    .cor2{
+                                        width: 150px;
+                                        height: 150px;  
+                                        border-radius: 20px;
+                                        background-color: #111;
+                                        box-shadow: 17px 17px 36px 5px rgba(0, 0, 0, 0.05);
+                                    }
+                                    .cor3{
+                                        width: 150px;
+                                        height: 150px;  
+                                        border-radius: 20px;
+                                        background-color: #191919;
+                                        box-shadow: 17px 17px 36px 5px rgba(0, 0, 0, 0.05);
+                                    }
+                                    .cor4{
+                                        width: 150px;
+                                        height: 150px;  
+                                        border-radius: 20px;
+                                        background-color: #F5F5F5;
+                                        box-shadow: 17px 17px 36px 5px rgba(0, 0, 0, 0.05);
+                                    }
+                                }
+                            }
+                        }
+                        .projetoPage{
+                            max-width: 1150;
+                            width: 100%;
+                            border-radius: 30px;
+                            padding: 25px;
+                            background-color: #1E1E1E;
+                            img{
+                                border-radius: 30px;
+                                width: 100%;
+                            }
+                        }
+                    }
                 }
             }
         }
